Display LAN icon, fixes #1662

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -478,6 +478,7 @@ computer_list.lan=LAN
 connection_quality_good.text=Good connection quality
 connection_quality_medium.text=Medium connection quality
 connection_quality_poor.text=Poor connection quality
+connection_lan.text=Connected via local area network
 
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
 date_format.file_date=MM/dd/yyyy HH\:mm
