Total disk size calc

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1301,6 +1301,7 @@ wizard.choose_disk_location.directory_non_existent=WARNING\: This directory does
 wizard.choose_disk_location.directory_size=Directory size {0}
 wizard.choose_disk_location.maual_sync=Manual synchronization
 wizard.choose_disk_location.options=Please select required options
+wizard.choose_disk_location.total_directory_size=Total disk size: {0}
 wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select_file=Select file
 wizard.choose_disk_location.send_invitation=Send invitation
