--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1305,6 +1305,7 @@ wizard.choose_disk_location.total_directory_size=Total disk size: {0}
 wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select_file=Select file
 wizard.choose_disk_location.send_invitation=Send invitation
+wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
 wizard.choose_disk_location.target_dir=Target directory
 wizard.choose_disk_location.title=Select Directory
 wizard.choose_disk_location.local_base.title=Base directory
