--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
@@ -1,8 +1,8 @@
 # this section contains the images used in actions
 
 action_abort_download.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Abort.gif
-action_add_friend.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/AddFriend.gif
-action_add_invitee.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/AddFriend.gif
+action_add_friend.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/AddFriend.png
+action_add_invitee.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/AddFriend.png
 action_add_ignore.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Add.png
 action_add_directory.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Add.png
 action_clear_completed_downloads.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Clear.gif
