Fixed illegal grid

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,7 +1,7 @@
 # this section contains the images used in actions
 
 action_abort_download.icon=icons/Abort.gif
-action_add_friend.icon=icons/AddFriend.gif
+action_add_friend.icon=icons/AddFriend.png
 action_add_invitee.icon=icons/Invite.png
 action_add_ignore.icon=icons/Add.png
 action_add_directory.icon=icons/Add.png
