--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -290,6 +290,7 @@ action_activate_warning.name=Warning
 transfer_mode.auto_download_friends.name=Auto-download friends
 transfer_mode.automatic_download.name=Automatic download
 transfer_mode.automatic_synchronization.name=Automatic synchronization
+transfer_mode.automatic_synchronization_10min.name=Automatic synchronization (10 minutes)
 transfer_mode.backup_source.name=Backup (source)
 transfer_mode.backup_target.name=Backup (target)
 transfer_mode.custom.name=Custom profile
