--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -742,6 +742,9 @@ folder_member_table_model.name=Computer
 folder_member_table_model.account=User
 folder_member_table_model.sync_status=Sync
 folder_member_table_model.permission=Permission
+folder_member.change_owner.title=Change owner
+folder_member.change_owner.message=You are about to change the owner of the Folder.\nOld owner: {0}\nNew owner: {1}
+folder_member.nobody=Nobody
 
 folder_panel.settings_tab.addbutton.name=Add
 folder_panel.settings_tab.editbutton.name=Edit
