--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -718,6 +718,10 @@ folder_problem.table_model.description=Description
 folder_problem.table_model.wiki_link=Wiki Link
 folder_problem.table_model.solution=Solution
 folder_problem.table_model.not_available=Not available
+folder_problem.no_owner=No owner found
+folder_problem.no_owner.soln_desc=Become owner of this folder now.
+folder_problem.no_owner.no_login.title=Not logged in
+folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 
 folder_exception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
 folder_exception.dialog.title=Problem with PowerFolder '{0}'
@@ -743,7 +747,7 @@ folder_member_table_model.account=User
 folder_member_table_model.sync_status=Sync
 folder_member_table_model.permission=Permission
 folder_member.change_owner.title=Change owner
-folder_member.change_owner.message=You are about to change the owner of the Folder.\nOld owner: {0}\nNew owner: {1}
+folder_member.change_owner.message=You are about to change the owner of the Folder.\nOld owner: {0} (you)\nNew owner: {1}
 folder_member.nobody=Nobody
 
 folder_panel.settings_tab.addbutton.name=Add
