--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -749,6 +749,12 @@ folder_member_table_model.permission=Permission
 folder_member.change_owner.title=Change owner
 folder_member.change_owner.message=You are about to change the owner of the Folder.\nOld owner: {0} (you)\nNew owner: {1}
 folder_member.nobody=Nobody
+folder_member.not_syncing=Not syncing
+folder_member.not_connected_to_server=Not connected to server
+folder_member.server=Server
+folder_member.not_logged_in=Not logged in
+folder_member.default_permission=Default permission:
+
 
 folder_panel.settings_tab.addbutton.name=Add
 folder_panel.settings_tab.editbutton.name=Edit
@@ -987,10 +993,12 @@ online_storage_component.online_storage_warning=Online storage quota exceeded
 
 percent.place.holder={0}%
 
+permissions.folder.no_access=No access
 permissions.folder.read_write=Read/Write
 permissions.folder.read=Read
 permissions.folder.admin=Admin
 permissions.folder.owner=Owner
+permissions.folder.default=default
 
 plugin_disable.description=Disable (and stop) Plugin
 plugin_disable.key=D
