fixes #1675 refs #1648 optimized login

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -227,10 +227,6 @@ action_restore_archive.description=Restore archived file version
 action_restore_archive.key=R
 action_restore_archive.name=Restore
 
-action_skip_login.description=You may configure Online Storage later
-action_skip_login.key=N
-action_skip_login.name=No thanks, I don't want to use the Online Storage
-
 action_search_computer.description=Search for a computer
 action_search_computer.key=S
 action_search_computer.name=Search
@@ -363,7 +359,7 @@ pro.wizard.activation.password_length=Valid Email and at least 6 chars for passw
 pro.wizard.activation.please_purchase=Please purchase PowerFolder Pro to re-activate.
 pro.wizard.activation.pro_activation=PowerFolder Pro Activation
 pro.wizard.activation.recover_password=Recover password
-pro.wizard.activation.register_now=Where can I register?
+pro.wizard.activation.register_now=Sign up for an account here
 pro.wizard.activation.register_now_trial_1=Please create an new trial account for free or
 pro.wizard.activation.register_now_trial_2=login with an existing to use PowerFolder Pro.
 pro.wizard.activation.register_why=Why do I need an account?
@@ -1362,6 +1358,8 @@ wizard.load_invitation.select_file=Please select invitation file
 wizard.login_online_storage.connecting=Connecting to PowerFolder. Please wait...
 wizard.login_online_storage.remember_password=Remember password
 wizard.login_online_storage.setup_default=Setup default synchronized folder.
+wizard.login_online_storage.no_os=Only direct sync. Don't store my files online.
+
 wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
 wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
@@ -1386,7 +1384,7 @@ wizard.webservice.enter_account=Please enter your account details to login
 wizard.webservice.enter_account_optional=Please enter your account details to login (optional)
 wizard.webservice.recover_password=Recover password
 wizard.webservice.learn_more=What is PowerFolder Online Storage?
-wizard.webservice.login=Online Storage Login
+wizard.webservice.login=Login
 wizard.webservice.mirror_folder=Back up this folder by PowerFolder Online Storage
 wizard.webservice.mirror_setup=Backup Folder by Online Storage
 wizard.webservice.password=Password
