--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -884,7 +884,7 @@ home_tab.online_storage.account_disabled=Account: {0} disabled
 home_tab.online_storage.account_disabled.tips=This account has been disabled
 home_tab.online_storage.account_not_logged_in=Account: {0} logging in...
 home_tab.online_storage.account_not_logged_in.tips=PowerFolder is logging in to this account
-home_tab.online_storage.not_setup=No Online Storage account set up
+home_tab.online_storage.not_setup=Not logged in. Account not set up yet
 home_tab.online_storage.not_setup.tips=Click here to configure account details
 home_tab.online_storage.no_password=Log in to Online Storage
 home_tab.online_storage.no_password.tips=Click here to enter account password
@@ -1338,8 +1338,8 @@ wizard.control.next=Next
 wizard.create_folder.problems=There were problems creating the folder(s).
 wizard.create_folder.title=Creating Folder(s)
 wizard.create_folder.working=Creating folder(s), please wait.
-wizard.finish.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup folders to it.
-wizard.finish.os_login_title=Online Storage Login Successful
+wizard.finish.os_login_text=The login was successful.
+wizard.finish.os_login_title=Login Successful
 wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 wizard.folder_invitation.title=Folder Invitation
 wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
