Group folders, refs #1670

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -705,6 +705,9 @@ find_computers_panel.search_for_computer.tooltip=Enter three or more characters 
 
 folder.info_tip=Contains files and folders managed by PowerFolder
 
+folder_list.local_folders=Local Folders
+folder_list.online_folders=Online Folders
+
 folder_create.os_error.text=Unable to setup the Online Storage to backup folder {0}
 folder_create.dialog.select_directory.text=Select directory
 
@@ -772,11 +775,6 @@ folder_repository.warn_on_close_eta.text=These folders are not synchronized yet\
 folder_repository.warn_on_close.title=Synchronizing
 folder_repository.continue_exit=Exit anyways
 
-folders_tab.all_folders=All folders
-folders_tab.folder_type_list.text=Select folder types to display
-folders_tab.only_local_folders=Only local folders
-folders_tab.only_online_folders=Only online folders
-
 free_limit_dialog.buy_pro=Buy PowerFolder Pro
 free_limit_dialog.buy_recommendation2=PowerFolder is currently disabled until you take action.
 free_limit_dialog.buy_recommendation3=Support us by getting PowerFolder Pro\!
@@ -840,7 +838,6 @@ general.powerfolder=PowerFolder
 general.preview_folder=Preview folder
 general.proxy_settings=Proxy settings
 general.saturday=Saturday
-general.reject=Reject
 general.save.key=S
 general.save=Save
 general.search=Search
@@ -1381,7 +1378,6 @@ wizard.send_invitations.add_message.tip=Add a personalized message that will be 
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
 wizard.webservice.enter_account=Please enter your account details to login
-wizard.webservice.enter_account_optional=Please enter your account details to login (optional)
 wizard.webservice.recover_password=Recover password
 wizard.webservice.learn_more=What is PowerFolder Online Storage?
 wizard.webservice.login=Login
