--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -794,7 +794,7 @@ friend_search.node_table.ip=IP
 friend_search.node_table.last_seen_online=Last seen online
 friend_search.node_table.name=Computer
 friend_search.node_table.account=User
-friend_search.node_table.on_local_network=On LAN
+friend_search.node_table.on_local_network=LAN
 
 folders_tab.no_folders_available=No folders available
 
