--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1302,7 +1302,7 @@ wizard.basic_setup.private=LAN and Internet
 wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basic_setup.upload.title=Unlimited connection speed
-wizard.choose_disk_location.backup_by_online_storage=Backup by Online Storage
+wizard.choose_disk_location.backup_by_online_storage=Backup online
 wizard.choose_disk_location.calculating_directory_size=Calculating size...
 wizard.choose_disk_location.create_desktop_shortcut=Create desktop shortcut
 wizard.choose_disk_location.directory_no_write=WARNING\: This directory cannot be written to
@@ -1310,7 +1310,7 @@ wizard.choose_disk_location.directory_non_existent=WARNING\: This directory does
 wizard.choose_disk_location.directory_size=Directory size {0}
 wizard.choose_disk_location.maual_sync=Manual synchronization
 wizard.choose_disk_location.options=Please select required options
-wizard.choose_disk_location.total_directory_size=Total disk size: {0}
+wizard.choose_disk_location.total_directory_size=Total size: {0}
 wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select_file=Select file
 wizard.choose_disk_location.send_invitation=Send invitation
@@ -1387,17 +1387,17 @@ wizard.webservice.password=Password
 wizard.webservice.unmirror_folder=Remove this folder from PowerFolder Online Storage
 wizard.webservice.unmirror_setup=Remove Folder from Online Storage
 wizard.webservice.username=Email
-wizard.what_to_do.backp.select=Please select the directory which should be backed up
+wizard.what_to_do.backp.select=Please select the files to backup
 wizard.what_to_do.backup_folder.tip=Choose this option to backup files to other computers
-wizard.what_to_do.backup_folder=Backup a folder
+wizard.what_to_do.backup_folder=Backup files
 wizard.what_to_do.custom_sync.tip=Choose this option to configure customized file transfer modes
 wizard.what_to_do.custom_sync=Advanced setup
 wizard.what_to_do.folder_backup_success=You successfully set up a folder backup\!\n
 wizard.what_to_do.folder_host_success=You successfully set up a host folder\!\n
-wizard.what_to_do.host_pcs.select=Please select the directory which should be the host
+wizard.what_to_do.host_pcs.select=Please select the files to send/shared
 wizard.what_to_do.host_pcs_join=Other computers can join this folder now
 wizard.what_to_do.host_work.tip=Choose this option to host files or share them with other computers
-wizard.what_to_do.host_work=Share/Send a folder
+wizard.what_to_do.host_work=Send/Share files
 wizard.what_to_do.invite.select_local=Please select local target directory for the files
 wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
 wizard.what_to_do.load_invite=Open invitation file
@@ -1406,13 +1406,13 @@ wizard.what_to_do.join_online=Sync previously setup folders
 wizard.error_title=Wizard error
 wizard.what_to_do.no_os_text=Sorry, there are no unjoined\nOnline Storage folders available
 wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
-wizard.what_to_do.open_online_documentation=Open online documentation
+wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.pcs_join=Other computers can join this folder now
 wizard.what_to_do.sync_pcs.pcs_join=Other computers can join this folder now
-wizard.what_to_do.sync_pcs.select=Please select the directory which should be synchronized
+wizard.what_to_do.sync_pcs.select=Please select the files to synchronize
 wizard.what_to_do.sync_pcs.success=You successfully set up a folder mirror\!\n
 wizard.what_to_do.synchronized_folder.tip=Choose this option to synchronize files with other computers
-wizard.what_to_do.synchronized_folder=Synchronize computer
+wizard.what_to_do.synchronized_folder=Synchronize files
 wizard.what_to_do.title=What do you want to do?
 
 wizard.tell_friend.title=Tell a friend about PowerFolder
