--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1366,9 +1366,8 @@ wizard.project_name.folder_project_success=You successfully set up a project fol
 wizard.select_online_storage.title=Select Online Storage folders
 wizard.select_online_storage.info=Please select Online Storage folders to join locally
 wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
-wizard.send_invitations.invitation_hint1=Enter a computer name or email address, and add to list
-wizard.send_invitations.invitation_hint2=or select computers to invite
-wizard.send_invitations.information=What is an Invitation?
+wizard.send_invitations.invitation_hint1=Enter a email or computer name to invite.
+wizard.send_invitations.information=What is an invitation?
 wizard.send_invitations.title=Send Invitation
 wizard.send_invitations.send_success=Invitation sent
 wizard.send_invitations.send_success_info=You successfully sent the invitation.
