--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1326,8 +1326,8 @@ wizard.control.back.description=Go to previous wizard step
 wizard.control.back=Back
 wizard.control.cancel.description=Cancel this wizard
 wizard.control.cancel=Cancel
-wizard.control.finish.description=Finish this wizard task
-wizard.control.finish=Finish
+wizard.control.finish.description=Exit this wizard task
+wizard.control.finish=Exit
 wizard.control.help.description=Show online help (Alt-8)
 wizard.control.help=Help
 wizard.control.next.description=Go to next wizard step
