fixed documentation URL

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -902,7 +902,7 @@ invitation.utils.unable.write.title=Unable to write invitation
 invitation_files.description=PowerFolder invitations
 
 limited_connection.dont_autodetect=No longer detect limited connectivity
-limited_connection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
+limited_connection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation:\n{0}
 limited_connection.title=Limited connectivity
 
 line_speed.T1=T1 (1.544mbit)
