Expand / collapse groups, fixes #1670

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -62,6 +62,8 @@ add.icon=icons/Add.png
 advanced.icon=icons/Advanced.png
 arrow_left.icon=icons/ArrowLeft.gif
 arrow_right.icon=icons/ArrowRight.gif
+expand.icon=icons/Expand.png
+collapse.icon=icons/Collapse.png
 black_list.icon=icons/BlackList.gif
 blank.icon=icons/Blank.gif
 bug.icon=icons/Bug.png
