--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -468,9 +468,11 @@ computers_tab.show_offline=Show offline
 connect.dialog.text=Please enter the hostname or IP of the computer you want to connect.\n\nPowerFolder automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
 connect.dialog.title=Manually connect to a PowerFolder computer
 
-computer_list.my_computers=My Computers
-computer_list.friends=Friends
-computer_list.lan=LAN
+computers_list.my_computers=My Computers
+computers_list.friends=Friends
+computers_list.lan=LAN
+computers_list.collapse_hint=Collapse group
+computers_list.expand_hint=Expand group
 
 connection_quality_good.text=Good connection quality
 connection_quality_medium.text=Medium connection quality
@@ -548,7 +550,6 @@ dialog.node_select.multi_computers=Multiple computers selected
 dialog.node_select.no_computers=No computers selected
 dialog.node_select.text=Select computers to invite. Hold down Ctrl key to select multiple computers.
 dialog.node_select.title=Select computers
-dialog.personalized_message.title=Personalized message
 dialog.personalized_message.hint=Add a personalized message for the recipient
 dialog.restore_archive.title=Restore archived file
 dialog.restore_archive.save_error=There was a problem saving the file to disk: {0}
@@ -705,8 +706,10 @@ find_computers_panel.search_for_computer.tooltip=Enter three or more characters 
 
 folder.info_tip=Contains files and folders managed by PowerFolder
 
-folder_list.local_folders=Local Folders
-folder_list.online_folders=Online Folders
+folders_list.local_folders=Local Folders
+folders_list.online_folders=Online Folders
+folders_list.collapse_hint=Collapse group
+folders_list.expand_hint=Expand group
 
 folder_create.os_error.text=Unable to setup the Online Storage to backup folder {0}
 folder_create.dialog.select_directory.text=Select directory
@@ -1319,7 +1322,6 @@ wizard.choose_disk_location.target_dir=Target directory
 wizard.choose_disk_location.title=Select Directory
 wizard.choose_disk_location.local_base.title=Base directory
 wizard.choose_disk_location.local_base.text=It is not possible to move a folder to the PowerFolder base directory.
-wizard.choose_multi_disk_location.select=Please select required directories
 wizard.choose_multi_disk_location.select_additional=Please select additional directories
 wizard.choose_multi_disk_location.title=Select Directories
 wizard.control.back.description=Go to previous wizard step
