--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
@@ -62,6 +62,8 @@ add.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Add.png
 advanced.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Advanced.png
 arrow_left.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/ArrowLeft.png
 arrow_right.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/ArrowRight.png
+expand.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Expand.png
+collapse.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Collapse.png
 black_list.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/BlackList.png
 blank.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Blank.png
 bug.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Bug.png
