--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -980,9 +980,8 @@ online_label.connecting=Connecting
 online_label.disabled=Disabled
 online_label.online=Online
 
-online_storage.account_data=Unable to login. Are account details correct?
+online_storage.account_data=Unable to login. Please check input or recover your password (back).
 online_storage.connecting=Connecting to server
-online_storage.general_error=There was an error logging in\: ({0}).
 
 online_storage_component.online_storage_text=Online storage: {0}%
 online_storage_component.online_storage_warning=Online storage quota exceeded
@@ -1322,7 +1321,7 @@ wizard.choose_disk_location.target_dir=Target directory
 wizard.choose_disk_location.title=Select Directory
 wizard.choose_disk_location.local_base.title=Base directory
 wizard.choose_disk_location.local_base.text=It is not possible to move a folder to the PowerFolder base directory.
-wizard.choose_multi_disk_location.select_additional=Please select additional directories
+wizard.choose_multi_disk_location.select_additional=Additional directories
 wizard.choose_multi_disk_location.title=Select Directories
 wizard.control.back.description=Go to previous wizard step
 wizard.control.back=Back
@@ -1334,6 +1333,7 @@ wizard.control.help.description=Show online help (Alt-8)
 wizard.control.help=Help
 wizard.control.next.description=Go to next wizard step
 wizard.control.next=Next
+wizard.worker.problem=Problem occurred
 wizard.create_folder.problems=There were problems creating the folder(s).
 wizard.create_folder.title=Creating Folder(s)
 wizard.create_folder.working=Creating folder(s), please wait.
@@ -1358,6 +1358,8 @@ wizard.login_online_storage.connecting=Connecting to PowerFolder. Please wait...
 wizard.login_online_storage.remember_password=Remember password
 wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.no_os=Only direct sync. Don't store my files online.
+wizard.login_online_storage.logging_in=Logging in...
+wizard.login_online_storage.logging_in.text=Please wait while logging in.
 
 wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
@@ -1378,16 +1380,16 @@ wizard.send_invitations.add_message.text=Attach personalized message
 wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
-wizard.webservice.enter_account=Please enter your account details to login
+wizard.webservice.enter_account=Please enter your account details below
 wizard.webservice.recover_password=Recover password
 wizard.webservice.learn_more=What is PowerFolder Online Storage?
 wizard.webservice.login=Login
 wizard.webservice.mirror_folder=Back up this folder by PowerFolder Online Storage
 wizard.webservice.mirror_setup=Backup Folder by Online Storage
-wizard.webservice.password=Password
+wizard.webservice.password=Password:
 wizard.webservice.unmirror_folder=Remove this folder from PowerFolder Online Storage
 wizard.webservice.unmirror_setup=Remove Folder from Online Storage
-wizard.webservice.username=Email
+wizard.webservice.username=Email:
 wizard.what_to_do.backp.select=Please select the files to backup
 wizard.what_to_do.backup_folder.tip=Choose this option to backup files to other computers
 wizard.what_to_do.backup_folder=Backup files
@@ -1402,7 +1404,7 @@ wizard.what_to_do.host_work=Send/Share files
 wizard.what_to_do.invite.select_local=Please select local target directory for the files
 wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
 wizard.what_to_do.load_invite=Open invitation file
-wizard.what_to_do.join_online.tip=Choose this option locally join an Online Storage folder
+wizard.what_to_do.join_online.tip=Sync files from previously setup computers with this computer
 wizard.what_to_do.join_online=Sync previously setup folders
 wizard.error_title=Wizard error
 wizard.what_to_do.no_os_text=Sorry, there are no unjoined\nOnline Storage folders available
