--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -808,6 +808,7 @@ friends_panel.unable_to_connect=Currently online (Unable to connect)
 
 general.application.name=PowerFolder
 general.accept=Accept
+general.reject=Reject
 general.cancel.key=C
 general.cancel=Cancel
 general.close.key=C
