Show OS usage, fixes #1679

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -862,41 +862,44 @@ general.yesterday=Yesterday
 
 home_tab.computers=Computer(s)
 home_tab.files_available=File(s) available
-home_tab.new_warnings=Warning(s)
 home_tab.files_downloaded=File(s) downloaded
 home_tab.files_downloaded_active=File(s) downloaded ({0} KB/s)
 home_tab.files_uploaded=File(s) uploaded
 home_tab.files_uploaded_active=File(s) uploaded ({0} KB/s)
 home_tab.folders=Folder(s)
 home_tab.in_sync=All folders are synchronized
-home_tab.sync_eta=All folders will be synchronized {0}
-home_tab.never_synced=Folders never synchronized
-home_tab.no_folders=No folders configured
 home_tab.last_synced=Last synchronized {0}
+home_tab.local=Local
+home_tab.never_synced=Folders never synchronized
 home_tab.new_friend_requests=New friend request(s)
-home_tab.new_single_file_offers=New single file offer(s)
 home_tab.new_invitations=New invitation(s)
+home_tab.new_single_file_offers=New single file offer(s)
+home_tab.new_warnings=Warning(s)
 home_tab.no_computers=No other computers known
-home_tab.online_storage.account=Account: {0}
+home_tab.no_folders=No folders configured
 home_tab.online_storage.account.tips=Click to change account details
-home_tab.online_storage.account_connecting=Account: {0} connecting...
+home_tab.online_storage.account=Account: {0}
 home_tab.online_storage.account_connecting.tips=PowerFolder is connecting to this account
-home_tab.online_storage.account_disabled=Account: {0} disabled
+home_tab.online_storage.account_connecting=Account: {0} connecting...
 home_tab.online_storage.account_disabled.tips=This account has been disabled
-home_tab.online_storage.account_not_logged_in=Account: {0} logging in...
+home_tab.online_storage.account_disabled=Account: {0} disabled
 home_tab.online_storage.account_not_logged_in.tips=PowerFolder is logging in to this account
-home_tab.online_storage.not_setup=Not logged in. Account not set up yet
-home_tab.online_storage.not_setup.tips=Click here to configure account details
-home_tab.online_storage.no_password=Log in to Online Storage
+home_tab.online_storage.account_not_logged_in=Account: {0} logging in...
 home_tab.online_storage.no_password.tips=Click here to enter account password
-home_tab.online_storage.remaining={0} day(s) remaining
+home_tab.online_storage.no_password=Log in to Online Storage
+home_tab.online_storage.not_setup.tips=Click here to configure account details
+home_tab.online_storage.not_setup=Not logged in. Account not set up yet
 home_tab.online_storage.remaining.tips=Your account will expire in {0} days
-home_tab.online_storage.usage=Usage: {0}%
+home_tab.online_storage.remaining={0} day(s) remaining
+home_tab.online_storage.usage=Usage: {0} ({1}%)
+home_tab.online_storage=Online Storage
+home_tab.sync_eta=All folders will be synchronized {0}
+home_tab.synchronization=Synchronization
 home_tab.synchronizing=Synchronization in progress...
 home_tab.tell_friend.text=Tell a friend about PowerFolder
 home_tab.tell_friend.tip=Click here to send an email inviting friends to use PowerFolder
 home_tab.total={0} total
-home_tab.you_have=You have:
+home_tab.you_have=You have
 
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
