--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -359,7 +359,7 @@ pro.wizard.activation.password_length=Valid Email and at least 6 chars for passw
 pro.wizard.activation.please_purchase=Please purchase PowerFolder Pro to re-activate.
 pro.wizard.activation.pro_activation=PowerFolder Pro Activation
 pro.wizard.activation.recover_password=Recover password
-pro.wizard.activation.register_now=Sign up for an account here
+pro.wizard.activation.register_now=Sign up for an account
 pro.wizard.activation.register_now_trial_1=Please create an new trial account for free or
 pro.wizard.activation.register_now_trial_2=login with an existing to use PowerFolder Pro.
 pro.wizard.activation.register_why=Why do I need an account?
