--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -75,9 +75,9 @@ action_delete_file.description=Delete file
 action_delete_file.key=D
 action_delete_file.name=Delete
 
-action_delete_folder.description=Delete this folder
-action_delete_folder.key=D
-action_delete_folder.name=Delete Folder
+action_remove_folder.description=Remove this folder
+action_remove_folder.key=R
+action_remove_folder.name=Remove Folder
 
 action_details.description=Display the details panel
 action_details.key=D
@@ -768,7 +768,7 @@ folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=Remove
 folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.remove_from_local=Stop synchronizing locally
-folder_remove.dialog.remove_from_os=Remove from Online Storage
+folder_remove.dialog.remove_from_os=Remove from online folders
 folder_remove.dialog.sync_warning=The PowerFolder is currently synchronizing\!
 folder_remove.dialog.text=Remove PowerFolder {0}?
 folder_remove.dialog.title=Remove PowerFolder {0}?
