Folder create archive verions, refs #1658

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -808,6 +808,7 @@ friends_panel.unable_to_connect=Currently online (Unable to connect)
 
 general.application.name=PowerFolder
 general.accept=Accept
+general.archive_mode=Archive mode
 general.reject=Reject
 general.cancel.key=C
 general.cancel=Cancel
@@ -1369,6 +1370,8 @@ wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
 wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_online_storage_setup.title=Configure Online Storage Folders
+wizard.multi_folder_setup.versions_text=Versions
+wizard.multi_folder_setup.versions_hint_text=(Select -1 for unlimited versioning)
 wizard.pfwizard.title=Folder Wizard
 wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.select_online_storage.title=Select Online Storage folders
