refs #1303 refs #1637 refs #1664 refs #1382

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -370,8 +370,6 @@ pro.wizard.activation.thanks_additional=Thank you for purchasing additional\nPow
 pro.wizard.activation.thanks_purchase=Thank you for purchasing PowerFolder Pro.
 pro.wizard.activation.try_again=Try again
 pro.wizard.activation.unable_to_login=Unable to login. Email or password wrong?
-pro.wizard.activation.update_service_account=Update Service Account
-pro.wizard.activation.update_service_info=Automatically get the latest features and bug fixes.
 pro.wizard.activation.valid_from=Valid from
 pro.wizard.activation.valid_to=Valid to
 pro.wizard.activation.no_key_info_1=Please login with an existing account to
@@ -848,6 +846,9 @@ general.save=Save
 general.search=Search
 general.seconds=Second(s)
 general.server_only=Server only
+general.server=Server
+general.email=Email
+general.password=Password
 general.size=Size
 general.sunday=Sunday
 general.synchonisation=Synchronization
@@ -878,22 +879,22 @@ home_tab.new_single_file_offers=New single file offer(s)
 home_tab.new_warnings=Warning(s)
 home_tab.no_computers=No other computers known
 home_tab.no_folders=No folders configured
+home_tab.not_running=Not running
 home_tab.online_storage.account.tips=Click to change account details
-home_tab.online_storage.account=Account: {0}
+home_tab.online_storage.account={0} (change)
 home_tab.online_storage.account_connecting.tips=PowerFolder is connecting to this account
-home_tab.online_storage.account_connecting=Account: {0} connecting...
+home_tab.online_storage.account_connecting={0} connecting...
 home_tab.online_storage.account_disabled.tips=This account has been disabled
-home_tab.online_storage.account_disabled=Account: {0} disabled
+home_tab.online_storage.account_disabled={0} disabled
 home_tab.online_storage.account_not_logged_in.tips=PowerFolder is logging in to this account
-home_tab.online_storage.account_not_logged_in=Account: {0} logging in...
+home_tab.online_storage.account_not_logged_in={0} logging in...
 home_tab.online_storage.no_password.tips=Click here to enter account password
 home_tab.online_storage.no_password=Log in to Online Storage
 home_tab.online_storage.not_setup.tips=Click here to configure account details
-home_tab.online_storage.not_setup=Not logged in. Account not set up yet
-home_tab.online_storage.remaining.tips=Your account will expire in {0} days
-home_tab.online_storage.remaining={0} day(s) remaining
-home_tab.online_storage.usage=Usage: {0} ({1}%)
-home_tab.online_storage=Online Storage
+home_tab.online_storage.not_setup=Not set up yet. Sign up here now
+
+home_tab.online_storage.usage=Online usage: {0} ({1}%)
+home_tab.online_storage.title=Account
 home_tab.sync_eta=All folders will be synchronized {0}
 home_tab.synchronization=Synchronization
 home_tab.synchronizing=Synchronization in progress...
@@ -901,6 +902,12 @@ home_tab.tell_friend.text=Tell a friend about PowerFolder
 home_tab.tell_friend.tip=Click here to send an email inviting friends to use PowerFolder
 home_tab.total={0} total
 home_tab.you_have=You have
+pro.home_tab.upgrade_to_full=Upgrade PowerFolder
+pro.home_tab.renew_license=Renew PowerFolder
+pro.home_tab.remaining.tips=Your license will expire in {0} days
+pro.home_tab.remaining={0} day(s) remaining
+pro.home_tab.disabled=Not running. Activate now
+pro.home_tab.disabled.tips=Click to learn why PowerFolder is currently disabled.
 
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
@@ -1414,7 +1421,7 @@ wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.join_online.tip=Sync files from previously setup computers with this computer
 wizard.what_to_do.join_online=Sync previously setup folders
 wizard.error_title=Wizard error
-wizard.what_to_do.no_os_text=Sorry, there are no unjoined\nOnline Storage folders available
+wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
 wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
 wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.pcs_join=Other computers can join this folder now
