--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -891,7 +891,7 @@ home_tab.online_storage.account_not_logged_in={0} logging in...
 home_tab.online_storage.no_password.tips=Click here to enter account password
 home_tab.online_storage.no_password=Log in to Online Storage
 home_tab.online_storage.not_setup.tips=Click here to configure account details
-home_tab.online_storage.not_setup=Not set up yet. Sign up here now
+home_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
 
 home_tab.online_storage.usage=Online usage: {0} ({1}%)
 home_tab.online_storage.title=Account
