refs #1648 workflows refs #1683

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -121,7 +121,7 @@ action_hide_offline.name=Hide offline computers
 
 action_invite_advanced.description=Show advanced options
 action_invite_advanced.key=A
-action_invite_advanced.name=Advanced
+action_invite_advanced.name=Advanced options
 
 action_invite_friend.description=Invite a friend to join this folder
 action_invite_friend.key=I
@@ -1392,6 +1392,9 @@ wizard.send_invitations.send_success_info=You successfully sent the invitation.
 wizard.send_invitations_advanced.title=Send Invitation - Advanced
 wizard.send_invitations.add_message.text=Attach personalized message
 wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
+wizard.send_invitations.no_invitees=No invitees. Please try again.
+wizard.send_invitations.sending_invites=Sending invite
+wizard.send_invitations.sending_invites.text=Please wait while sending invites.
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
 wizard.webservice.enter_account=Please enter your account details below
