--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1394,7 +1394,7 @@ wizard.send_invitations.add_message.text=Attach personalized message
 wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
 wizard.send_invitations.no_invitees=No invitees. Please try again.
 wizard.send_invitations.sending_invites=Sending invite
-wizard.send_invitations.sending_invites.text=Please wait while sending invites.
+wizard.send_invitations.sending_invites.text=Please wait while sending invite.
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
 wizard.webservice.enter_account=Please enter your account details below
