--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -445,6 +445,11 @@ apps.dir.thunderbird=Thunderbird
 archive.no_backup=No backup
 archive.full_backup=Full backup
 
+archive_mode_selector_panel.none=None
+archive_mode_selector_panel.unlimited=Unlimited
+archive_mode_selector_panel.version={0} version
+archive_mode_selector_panel.versions={0} versions
+
 chat_frame.title=Chat
 chat_frame.tool_tip=Chat with {0}
 
