--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -611,6 +611,8 @@ exp_computer_view.node_friend_connected_text=Connected friend computer
 exp_computer_view.node_friend_disconnected_text=Disconnected friend computer
 exp_computer_view.node_non_friend_connected_text=Connected non-friend computer
 exp_computer_view.node_non_friend_disconnected_text=Disconnected non-friend computer
+exp_computer_view.account=User: {0}
+exp_computer_view.no_login=Not logged in
 
 exp_folder_view.collapse=Collapse folder details
 exp_folder_view.expand=Expand folder details
