Folder create ArchiveModeSelectorPanel, ref #1685

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -812,8 +812,8 @@ friends_panel.n_a=n/a
 friends_panel.unable_to_connect=Currently online (Unable to connect)
 
 general.application.name=PowerFolder
+general.archive_mode=File archive (local)
 general.accept=Accept
-general.archive_mode=Archive mode
 general.reject=Reject
 general.cancel.key=C
 general.cancel=Cancel
@@ -1169,7 +1169,6 @@ settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchroniz
 settings_tab.add_a_pattern.title=Add ignore pattern
 settings_tab.add_patterns.text_1=The following ignore patterns will be added
 settings_tab.add_patterns.title=Add ignore patterns
-settings_tab.archive_mode=File archive (local)
 settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
 settings_tab.confirm_local_folder_move.title=Confirm move
 settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
