--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -613,6 +613,7 @@ exp_computer_view.node_non_friend_connected_text=Connected non-friend computer
 exp_computer_view.node_non_friend_disconnected_text=Disconnected non-friend computer
 exp_computer_view.account=User: {0}
 exp_computer_view.no_login=Not logged in
+exp_computer_view.version=Client version: {0}
 
 exp_folder_view.collapse=Collapse folder details
 exp_folder_view.expand=Expand folder details
