--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -65,11 +65,11 @@ action_delete_transfer_mode.name=Delete
 
 action_backup_online_storage.description=Backup this folder to Online Storage
 action_backup_online_storage.key=B
-action_backup_online_storage.name=Online Storage Backup
+action_backup_online_storage.name=Start online backup
 
 action_stop_online_storage.description=Stop backing up this folder to Online Storage
 action_stop_online_storage.key=S
-action_stop_online_storage.name=Stop Backing up
+action_stop_online_storage.name=Stop online backup
 
 action_delete_file.description=Delete file
 action_delete_file.key=D
@@ -1362,13 +1362,13 @@ wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 wizard.folder_invitation.title=Folder Invitation
 wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
-wizard.folder_online_storage.failure_message=PowerFolder was unable to configure folder {0}.\n \nCause: {1}
-wizard.folder_online_storage.failure_title=Online Storage Error
 wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
 wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
 wizard.folder_online_storage.warning_message=Do you really want to stop backing up this folder online?
 wizard.folder_online_storage.warning_stop_backing=Stop backing up
 wizard.folder_online_storage.warning_title=Online Storage
+wizard.folder_online_storage.working=Configuring Online Storage
+wizard.folder_online_storage.working.text=Please wait while configuring Online Storage
 wizard.folder_setup.title=Configure Folder
 wizard.load_invitation.choose_file=Choose the invitation file
 wizard.load_invitation.select=Select invitation file
